--- a/package.json
+++ b/package.json
@@ -2,7 +2,21 @@
   "name": "travel-site",
   "version": "1.0.0",
   "dependencies": {
-    "jquery": "^3.4.1",
-    "normalize.css": "^8.0.1"
+    "jquery": "^2.2.3",
+    "normalize.css": "^4.1.1",
+    "postcss-modules-scope": "^1.1.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^6.3.6",
+    "browser-sync": "^2.26.5",
+    "gulp": "^3.9.1",
+    "gulp-postcss": "^6.1.1",
+    "gulp-watch": "^4.3.5",
+    "postcss": "^7.0.0",
+    "postcss-cli": "^6.1.2",
+    "postcss-import": "^8.1.2",
+    "postcss-mixins": "^6.2.1",
+    "postcss-nested": "^1.0.1",
+    "postcss-simple-vars": "^1.2.0"
   }
 }
