--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "devDependencies": {
     "autoprefixer": "^6.3.6",
     "browser-sync": "^2.26.5",
+    "del": "^4.1.1",
     "gulp": "^3.9.1",
     "gulp-postcss": "^6.1.1",
+    "gulp-rename": "^1.4.0",
+    "gulp-svg-sprite": "^1.5.0",
     "gulp-watch": "^4.3.5",
     "postcss": "^7.0.0",
     "postcss-cli": "^6.1.2",
