--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "name": "travel-site",
   "version": "1.0.0",
   "dependencies": {
-    "jquery": "^2.2.3",
+    "jquery": "^2.2.4",
     "normalize.css": "^4.1.1",
     "postcss-modules-scope": "^1.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
     "autoprefixer": "^6.3.6",
+    "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
     "browser-sync": "^2.26.5",
     "del": "^4.1.1",
     "gulp": "^3.9.1",
@@ -17,9 +22,12 @@
     "gulp-watch": "^4.3.5",
     "postcss": "^7.0.0",
     "postcss-cli": "^6.1.2",
+    "postcss-hexrgba": "^1.0.1",
     "postcss-import": "^8.1.2",
     "postcss-mixins": "^6.2.1",
     "postcss-nested": "^1.0.1",
-    "postcss-simple-vars": "^1.2.0"
+    "postcss-simple-vars": "^1.2.0",
+    "webpack": "^1.13.1",
+    "webpack-cli": "^3.3.3"
   }
 }
