--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "jquery-smooth-scroll": "^2.2.0",
     "lazysizes": "^5.1.0",
     "normalize.css": "^4.1.1",
+    "picturefill": "^3.0.3",
     "postcss-modules-scope": "^1.1.0",
     "waypoints": "^4.0.1"
   },
@@ -19,9 +20,11 @@
     "browser-sync": "^2.26.5",
     "del": "^4.1.1",
     "gulp": "^3.9.1",
+    "gulp-modernizr": "^3.2.1",
     "gulp-postcss": "^6.1.1",
     "gulp-rename": "^1.4.0",
     "gulp-svg-sprite": "^1.5.0",
+    "gulp-svg2png": "^2.0.2",
     "gulp-watch": "^4.3.5",
     "postcss": "^7.0.0",
     "postcss-cli": "^6.1.2",
